// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton Component Dark Theme should match the snapshot with the alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
}

<button
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`StyledButton Component Dark Theme should match the snapshot with the borderless-alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
}

<button
    class="c0 borderless-alert"
  />
</DocumentFragment>
`;

exports[`StyledButton Component Dark Theme should match the snapshot with the disabled status 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
}

<button
    class="c0 primary"
    disabled=""
  />
</DocumentFragment>
`;

exports[`StyledButton Component Dark Theme should match the snapshot with the primary class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
}

<button
    class="c0 primary"
  />
</DocumentFragment>
`;

exports[`StyledButton Component Light Theme should match the snapshot with the alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCCCCC;
  color: #666666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCCCCC;
}

<button
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`StyledButton Component Light Theme should match the snapshot with the borderless-alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCCCCC;
  color: #666666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCCCCC;
}

<button
    class="c0 borderless-alert"
  />
</DocumentFragment>
`;

exports[`StyledButton Component Light Theme should match the snapshot with the disabled status 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCCCCC;
  color: #666666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCCCCC;
}

<button
    class="c0 primary"
    disabled=""
  />
</DocumentFragment>
`;

exports[`StyledButton Component Light Theme should match the snapshot with the primary class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70F2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: none;
  color: #E80000;
  height: 0;
  padding: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCCCCC;
  color: #666666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCCCCC;
}

<button
    class="c0 primary"
  />
</DocumentFragment>
`;
